tests/negative/test_cast_prim_data.orb
data Foo {
    i32 x;
}

fnc main() {
    (Foo(100));
}